<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_item"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="TextSizeCheck">

        <ImageView
            android:id="@+id/news_image"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:contentDescription="@string/image_news"
            android:scaleType="fitXY"
            tools:src="@tools:sample/backgrounds/scenic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="@font/archivo_bold"
                android:maxLines="2"
                android:text="@string/title_news"
                android:textAppearance="?attr/textAppearanceTitleLarge"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@tools:sample/lorem" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_src"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_source"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_date"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_date" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/news_date"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>