<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbarHome"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="?android:attr/windowBackground"
        android:minHeight="65dp"
        android:theme="@style/Base.Theme.MandiriNews"
        android:visibility="visible"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_home">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/toolbar_logo_image"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:background="@color/bgMandiri"
                android:contentDescription="@string/image_news"
                android:src="@drawable/mandiri"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.App.CircleImageView" />

            <TextView
                android:id="@+id/toolbar_title_custom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:baselineAligned="false"
                android:fontFamily="@font/basic_sans_alt_narrow_w00_bold"
                android:text="@string/app_name"
                android:textSize="24sp" />
        </LinearLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarHome">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHeadlineNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/headline_news"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHeadlineNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="1dp"
                android:orientation="horizontal"
                tools:listitem="@layout/item_row_news_horizontal" />

            <TextView
                android:id="@+id/tvAllNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/all_news"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvAllNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="1dp"
                tools:listitem="@layout/item_row_news_vertical" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>